--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4"
   }
 }
