--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   }
 }
